snapshots/syntax/library/statements/sendkeys/sendkeys_multiple_on_same_line.snap
---
source: src/syntax/library/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SendKeysStatement
      children:
        - kind: SendKeysKeyword
          text: SendKeys
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"A\""
        - kind: ColonOperator
          text: ":"
        - kind: Whitespace
          text: " "
        - kind: SendKeysKeyword
          text: SendKeys
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"B\""
        - kind: Newline
          text: "\n"
