snapshots/syntax/library/statements/sendkeys/sendkeys_preserves_whitespace.snap
---
source: src/syntax/library/statements/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SendKeysStatement
      children:
        - kind: SendKeysKeyword
          text: SendKeys
        - kind: Whitespace
          text: "   "
        - kind: StringLiteral
          text: "\"Text\""
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "   "
        - kind: TrueKeyword
          text: "True"
        - kind: Newline
          text: "\n"
